--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Calculadora de Notas</string>
+    <!-- 05/03/2021 TODO OK:  13 - Crie uma string calcular -->
+    <string name="calcular">Calcular</string>
 </resources>
